# reef_imu_cam_calibration

./: .gitignore  CMakeLists.txt  layout_for_debug.xml  package.xml  plot_insets.m  plot_juggler_layout.xml  plotting.asv  plotting.m  save_figure.m
config/: plot_juggler_layout.xml
include/camera_imu_calib/: camera_imu_ekf.h  estimator.h  sensor_manager.h
launch/: charuco_bag_collect.launch  collect_bag.launch  estimator_bag.launch  with_camera_info_node.launch
msg/: ExpectedMeasurement.msg  IMUCalibration.msg
params/: estimator_param.yaml
src/: camera_imu_ekf.cpp  estimator.cpp  sensor_manager.cpp  view_expected_measurement.cpp
